# smart-router

./: K8S-discovery-PLAN.md  README.md  pyproject.toml
docs/: kubernetes-service-discovery.md
smart_router/: tokenization.py
smart_router/cache/: __init__.py  kv_cache_state.py  vllm_kv_event_subscriber.py
smart_router/config/: __init__.py  k8s.py  kv_events.py  policy.py  router.py  scheduler.py  smart_router.py  tokenization.py  upstream_http.py  utils.py  worker.py
smart_router/discovery/: __init__.py  k8s.py  k8s_discovery.py
smart_router/engine/: engine.py  engine_client.py  normal_engine.py  sglang_engine.py  vllm_engine.py
smart_router/entrypoints/serve/: api_server.py  http_client.py  normal_routes.py  sglang_routes.py  vllm_routes.py
smart_router/kv/: __init__.py  events.py  hashing.py  indexer.py  subscriber.py  tokenizer.py
smart_router/openai/: __init__.py  processing.py
smart_router/policies/: __init__.py  consistent_hash.py  kv_aware.py  kv_event_prefix_aware.py  minimum_load.py  policy.py  power_of_two.py  prefix_aware.py  prefix_tree.py  round_robin.py
smart_router/worker/: factory.py  worker_registry.py
tests/: test_api_server_models.py  test_batch_scheduling.py  test_cli.py  test_config_discovery.py  test_engine.py  test_health.py  test_k8s_discovery.py  test_kv_aware_policy.py  test_kv_events.py  test_kv_indexer.py  test_models_route.py  test_normal_engine.py  test_normal_routes.py  test_openai_processing.py  test_upstream_http_client.py  test_vllm_routes_pd.py
