[project]
name = "smart-router-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "kubernetes>=35.0.0,<36.0.0",
    "msgspec>=0.19.0",
    "psutil>=7.2.2",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "starlette>=0.52.1,<1.0.0",
    "tornado>=6.1",
    "transformers>=4.53.0",
    "uvicorn>=0.41.0",
    "zmq>=0.0.0",
]

[project.optional-dependencies]
benchmark = [
    "aiohttp>=3.12.13",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.0",
    "xlsxwriter>=3.2.5",
]

[project.scripts]
smart-router = "smart_router.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["smart_router*"]
exclude = ["imgs*"]
